Finished the basic styling for the index.html.

--- a/index.html
+++ b/index.html
@@ -13,29 +13,26 @@
 <body>
 
   <!-- Main content -->
-  <div class="container my-5">
-    <div class="row">
-
-      <!-- Left side -->
-      <div class="col-md-7">
-        <h1>PrepPal</h1>
-        <h3>Prep. Plan. Play.</h3>
+  <div class="flex-container">
+      
+      <div>
+        <h1 style="text-decoration: underline rgba(72, 7, 7, 0.777);" >PrepPal</h1>
+        <h3 style="font-weight:bolder;" >Prep. Plan. Play.</h3>
+        <br>
         <h5>Your Ultimate Study Companion</h5>
+        <br>
         <p>
-          Stay on top of your studies with PrepPal, the app designed to make learning simple and organized. 
+          "Stay on top of your studies with PrepPal, the app designed to make learning simple and organized. 
           With Prep. Plan. Play., you can prep for exams, plan your schedule, and tick off every task. 
-          Whether you're juggling classes, projects, or deadlines, PrepPal is here to keep you focused and ahead of the curve.
+          Whether you're juggling classes, projects, or deadlines, PrepPal is here to keep you focused and ahead of the curve."
         </p>
+        <br>
+        <h4>Start your journey today...</h4>
+        <br>
+        <button class="login-btn">Login / Signup</button>
+        <button class="guest-btn">Continue as Guest</button>
       </div>
 
-      <!-- Right side -->
-      <div class="col-md-5">
-        <h4>Start your journey today</h4>
-        <button class="btn btn-primary w-100 mb-2">Login / Signup</button>
-        <button class="btn btn-secondary w-100">Continue as Guest</button>
-      </div>
-
-    </div>
   </div>
 
   <!-- Bootstrap JS (optional: only needed for interactive components like dropdowns, modals, etc.) -->
