Created the login.html and joined it with the index.html while finishing with the styling for the two. Restraining to HTML and CSS for now. Work on JavaScript to be done later.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <!-- Main content -->
-  <div class="flex-container">
+  <div class="container">
       
       <div>
         <h1 style="text-decoration: underline rgba(72, 7, 7, 0.777);" >PrepPal</h1>
@@ -29,7 +29,7 @@
         <br>
         <h4>Start your journey today...</h4>
         <br>
-        <button class="login-btn">Login / Signup</button>
+        <a href="login.html"> <button class="login-btn">Login / Signup</button> </a>
         <button class="guest-btn">Continue as Guest</button>
       </div>
 
