Created the general dashboard and implemented the functionalities where a user can create bullet points according to their priorities. They can also embed their google calendar in the app. And all the data will be stored on local storage.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <h4>Start your journey today...</h4>
         <br>
         <a href="login.html"> <button class="login-btn">Login / Signup</button> </a>
-        <button class="guest-btn">Continue as Guest</button>
+        <a href="user_dashboard.html"> <button class="guest-btn">Continue as Guest</button></a>
       </div>
 
   </div>
